<resources>
    <string name="app_name">RADMEHR_BookApp</string>
    <string name="button_add_book">Add Book</string>
    <string name="button_update_book">Update Book</string>
    <string name="title_inventory">Bookstore Inventory</string>
    <string name="hint_title">Enter book title</string>
    <string name="hint_author">Enter author name</string>
    <string name="hint_genre">Enter genre</string>
    <string name="hint_price">Enter price</string>
    <string name="hint_quantity">Enter quantity</string>
</resources>